--- a/proyecto-refactorizacion/pom.xml
+++ b/proyecto-refactorizacion/pom.xml
@@ -3,4 +3,13 @@
   <groupId>es.ies.daw</groupId>
   <artifactId>proyecto-refactorizacion</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+    <dependency> 
+       <groupId>junit</groupId> 
+       <artifactId>junit</artifactId> 
+       <version>4.13.2</version> 
+       <scope>test</scope> 
+    </dependency>
+</dependencies>
 </project>
