Set working directory for Maven clean and test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,5 @@ jobs:
  
     # Forzamos limpieza y compilación desde cero
     - name: Ejecutar Maven Clean y Test
+      working-directory: proyecto-refactorizacion
       run: mvn clean test
